--- a/travis.yml
+++ b/travis.yml
@@ -19,4 +19,4 @@ cache:
 
 # Command to run tests, e.g. python setup.py test
 script:
-  - python -m unittest tests.test_AB 
+  - python -m unittest tests.test
